--- a/app/sass/class/class.scss
+++ b/app/sass/class/class.scss
@@ -486,6 +486,7 @@ mark {
     position: absolute;
     top: -5px;
     left: -5px;
+    z-index: 2;
   }
   &--gray {
     background-color: #f0f0f0;
