--- a/app/sass/media/large.scss
+++ b/app/sass/media/large.scss
@@ -301,6 +301,10 @@
     left: 0;
   }
 
+  .product-price.goods-horizontal {
+    display: block;
+  }
+
 
 
   ////////////////////////////////// cart //////////////////////////////
